--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="header__contacts">
                     <a class="header__phone" href="tel:+74999228974">+7 (499) 922-89-74</a>
-                    <button class="button">ЗАКАЗАТЬ ЗВОНОК</button>
+                    <button data-modal='consultation' class="button">ЗАКАЗАТЬ ЗВОНОК</button>
                 </div>
             </header>
 
@@ -46,7 +46,7 @@
                     </div>
                 </div>
 
-                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <button data-modal='consultation' class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
                     или
                     <a href="#">перейти в каталог</a>
@@ -149,7 +149,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img class="catalog-item__img" src="icons/fifth_screen/photo.png" alt="">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__subtitle">Пульсометр Polar FT2</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, <br>основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">подробнее</a>
                         </div>
@@ -174,7 +174,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img class="catalog-item__img" src="icons/fifth_screen/photo.png" alt="">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__subtitle">Пульсометр Polar FT3</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, <br>основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">подробнее</a>
                         </div>
@@ -199,7 +199,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img class="catalog-item__img" src="icons/fifth_screen/photo.png" alt="">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, <br>основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">подробнее</a>
                         </div>
@@ -224,7 +224,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img class="catalog-item__img" src="icons/fifth_screen/photo.png" alt="">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__subtitle">Пульсометр Polar FT5</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, <br>основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">подробнее</a>
                         </div>
@@ -249,7 +249,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img class="catalog-item__img" src="icons/fifth_screen/photo.png" alt="">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__subtitle">Пульсометр Polar FT6</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, <br>основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">подробнее</a>
                         </div>
@@ -400,8 +400,44 @@
         </div>
     </footer>
 
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <div class="overlay ">
+        <div class="modal" id="consultation">
+            <div class="modal__close">&times;</div>
+            <div class="modal__title">Просто заполните форму заявки</div>
+            <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form" action="#">
+                <label action='#'>
+                    <input name="name" required placeholder="Ваше имя" type="text">
+                    <input name="phone" required placeholder="Ваш телефон" type="number">
+                    <input name="email" required placeholder="Ваше E-mail" type="email">
+                    <button class="button button_input">заказать консультацию</button>
+                </label>
+            </form>
+        </div>
+
+        <div class="modal" id="buing">
+            <div class="modal__close">&times;</div>
+            <div class="modal__title">Ваш заказ:</div>
+            <div class="modal__descr">Пульсометр Polar FT1</div>
+            <form class="feed-form" action="#">
+                <label action='#'>
+                    <input name="name" required placeholder="Ваше имя" type="text">
+                    <input name="phone" required placeholder="Ваш телефон" type="number">
+                    <input name="email" required placeholder="Ваше E-mail" type="email">
+                    <button class="button button_input">КУПИТЬ</button>
+                </label>
+            </form>
+        </div>
+
+        <div class="modal modal__mini" id="thanks">
+            <div class="modal__close">&times;</div>
+            <div class="modal__title">Спасибо за вашу заявку!</div>
+            <div class="modal__descr">Наш менеджер свяжется с вами  в ближайшее время!</div>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
